tests/typing/bad/testfile-subscript-2.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() { int x; x[1]; }
